--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@
 .green {
     background: #83a920;
 }
+.textgreen{
+    color: #83a920 !important;
+}
 
 .darkgreen {
     background: #83a920;
@@ -62,8 +65,6 @@ h3 {
     padding: 8px 0 8px 0;
 }
 
-.container .navbar-inner-container {}
-
 .topbar-full-container .topbar-container .topbar-links-container .topbar-links {
     display: inline-block;
     margin-top: 10px;
@@ -72,6 +73,7 @@ h3 {
 
 .main-nav-container {
     height: 80px;
+    z-index: 
 }
 
 .navbar-inner-container {
@@ -116,6 +118,11 @@ h3 {
 
 .main-contents-container .main-contents-inner-container .side-nav-container .room {
     background-image: url('../img/sidebar-header-bg.png');
+    background-repeat: no-repeat;
+}
+.main-contents-container .main-contents-inner-container .side-nav-container .family {
+    background-image: url('../img/sidebar-header-bg2.png');
+    background-repeat: no-repeat;
 }
 
 .main-contents-container .main-contents-inner-container .side-nav-container .sidebar-links {
@@ -134,6 +141,70 @@ h3 {
     background: #4a6600;
     color: #fff !important;
     text-transform: uppercase;
+}
+.btn{
+    border-radius: 0px;
+}
+form input[type=text],.form-control, .select2-search input[type=text]{
+    border-radius: 0px;
+    border: none;
+    background: #b6b6b6;
+}
+.btn-default{
+    background: #4a6600;
+}
+.btn-default:hover{
+    background: #83a920;
+}
+.content-pic{
+    border: 2px solid #4a6600; 
+}
+.pic-btn{
+    display: block;
+    width: 90%;
+    margin:10px auto;
+}
+
+
+.footer-wrapper{
+    background-image: url(http://preview.miamiwebservice.com/l3temp/wp-content/uploads/2016/03/l3-prefooter-bg.jpg);
+    height: 270px;
+    background-repeat: no-repeat;
+    background-size: cover;
+   /* padding: 20px 0 20px 0;*/
+}
+.footer{
+    height: 270px;
+    padding: 0px;
+    margin: 0px;
+    background: transparent;
+}
+
+.footer-link-container h4{
+    color: #fff;
+}
+.footer-link-container ul{
+    list-style: none;
+    margin: 0px; padding: 0px;
+}
+.footer-link-container ul li a{
+    color: #83a920 !important;
+}
+
+
+/*---------------------- kitchen ----------------------*/
+
+.panel-success .panel-heading{
+    background: #83a920;
+    color: #464646;
+    text-transform: uppercase;
+}
+.content-pic{
+    display: block;
+    margin: 0px auto;
+}
+.kitchen-form h4{
+    color: #4a6600;
 }
 
 
