--- a/css/style.css
+++ b/css/style.css
@@ -258,3 +258,6 @@ form input[type=text],
 .section-form-container {
     margin-top: 33px;
 }
+
+
+/*-------------------------FloorPlan Test ------------------------------------*/
